# line

./: CMakeLists.txt  README.md  config.h  linker.cpp  linker.h  main.cpp  module.cpp  module.h  plugin.cpp  plugin.h  stubs.cpp  stubs.h  symbol.h  tls.cpp  tls.h  whitelist.cpp  whitelist.h  windows.cpp  windows.h
.github/workflows/: build.yml
include/elfio/: elfio_strings.hpp
scripts/: ci.sh
stubs/: arith64.c  dirent.cpp  dirent.h  dlfcn.cpp  dlfcn.h  epoll.cpp  epoll.h  fcntl.cpp  fcntl.h  ioctl.cpp  ioctl.h  libc.cpp  libc.h  mqueue.cpp  mqueue.h  netdb.cpp  netdb.h  poll.cpp  poll.h  pthread.cpp  pthread.h  select.cpp  select.h  semaphore.cpp  semaphore.h  socket.cpp  socket.h  stat.cpp  stat.h  stdio.cpp  stdio.h  stub.h  termios.cpp  termios.h  time.cpp  time.h  unistd.cpp  unistd.h  wchar.cpp  wchar.h
